tests/ui/borrowck/borrowck-or-init.stderr
error[E0381]: used binding `i` is possibly-uninitialized
  --> $DIR/borrowck-or-init.rs:5:20
   |
LL |     let i: isize;
   |         - binding declared here but left uninitialized
LL |
LL |     println!("{}", false || { i = 5; true });
   |                               ----- binding initialized here in some conditions
LL |     println!("{}", i);
   |     ---------------^-
   |     |              |
   |     |              `i` used here but it is possibly-uninitialized
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
